--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,7 +1,7 @@
-@import "_normalize";
+@import "normalize";
+$font-family: helvetica, sans-serif;
 $background-color: #eee;
 $border-color: #2d2d2d;
-$font-family: helvetica, sans-serif;
 
 body {
   background-color: $background-color;
@@ -14,7 +14,7 @@ body {
 
 section {
   border: groove 1px $border-color;
-  padding: 5px 10px;
+  padding: 15px;
   margin: 50px 0;
 }
 
