--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
-@import "normalize";
+@import "base/normalize";
 $font-family: helvetica, sans-serif;
 $background-color: #eee;
 $border-color: #2d2d2d;
