reorganized the files

--- a/css/scss/styles.scss
+++ b/css/scss/styles.scss
@@ -1,4 +1,6 @@
-@import "base/normalize";
+@import "base";
+
+
 $font-family: helvetica, sans-serif;
 $background-color: #eee;
 $border-color: #2d2d2d;
