--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,15 +1,21 @@
 @import "normalize";
 @import "fontSettings";
+@import "mainTheme";
 
 body {
+  //Set line heights
   line-height: $base-line-hight;
+
+  //Set defult font weight
   font-weight: $font-weight-normal;
 }
 
 h1,h2,h3,h4,h5,h6 {
+  // Set heading font weights
   font-weight: $font-weight-heading;
 }
 
+// Set heading sizes
 h1 { font-size: $heading-size-1; }
 h2 { font-size: $heading-size-2; }
 h3 { font-size: $heading-size-3; }
