--- a/scss/_fontSettings.scss
+++ b/scss/_fontSettings.scss
@@ -2,6 +2,12 @@
 // Base Settings - High level settings for the entire site.
 //
 
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700');
+
+body {
+  font-family: 'Quicksand', helvetica, sans-serif;
+}
+
 // High level settings for the entire site.
 $base-spacing-units: 24px;
 $base-font-size: 16px;
@@ -24,16 +30,16 @@ $font-size-larger: $base-font-size * 2;
 $font-size-largest: $base-font-size * 3;
 
 // Font weights
-$font-weight-light: 100;
-$font-weight-normal: 200;
-$font-weight-bold: 300;
-$font-weight-bolder: 500;
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-bold: 500;
+$font-weight-bolder: 700;
 $font-weight-heading: $font-weight-bold;
 
 // Header sizes
-$heading-size-1: $base-font-size * 1.7;
-$heading-size-2: $base-font-size * 1.6;
-$heading-size-3: $base-font-size * 1.5;
-$heading-size-4: $base-font-size * 1.3;
+$heading-size-1: $base-font-size * 2;
+$heading-size-2: $base-font-size * 1.5;
+$heading-size-3: $base-font-size * 1.35;
+$heading-size-4: $base-font-size * 1.2;
 $heading-size-5: $base-font-size;
 $heading-size-6: $base-font-size * 0.9;
