--- a/scss/_sizes.scss
+++ b/scss/_sizes.scss
@@ -36,23 +36,19 @@ $heading-size-5: $base-font-size;
 $heading-size-6: $base-font-size * 0.9;
 
 body {
-  //Set line heights
-  // line-height: $base-line-hight;
-
-  //Set defult font weight
   font-weight: $font-weight-normal;
+  letter-spacing: 0.6px;
+
+  nav li a {
+    font-weight: $font-weight-bold;
+  }
 }
 
-// p {
-//   line-height:
-// }
-
-nav > a {
-  font-style: $font-weight-bold;
+h1 {
+  font-weight: $font-weight-bolder;
 }
 
-h1,h2,h3,h4,h5,h6 {
-  // Set heading font weights
+h2,h3,h4,h5,h6 {
   font-weight: $font-weight-heading;
 }
 
