Added media quries

--- a/scss/_sizes.scss
+++ b/scss/_sizes.scss
@@ -29,9 +29,9 @@ $font-size-largest: $base-font-size * 3;
 
 // Header sizes
 $heading-size-1: $base-font-size * 3;
-$heading-size-2: $base-font-size * 1.5;
-$heading-size-3: $base-font-size * 1.35;
-$heading-size-4: $base-font-size * 1.2;
+$heading-size-2: $base-font-size * 2;
+$heading-size-3: $base-font-size * 1.5;
+$heading-size-4: $base-font-size * 1.25;
 $heading-size-5: $base-font-size;
 $heading-size-6: $base-font-size * 0.9;
 
@@ -52,10 +52,22 @@ h2,h3,h4,h5,h6 {
   font-weight: $font-weight-heading;
 }
 
-// Set heading sizes
-h1 { font-size: $heading-size-1; }
-h2 { font-size: $heading-size-2; }
-h3 { font-size: $heading-size-3; }
-h4 { font-size: $heading-size-4; }
-h5 { font-size: $heading-size-5; }
-h6 { font-size: $heading-size-6; }
+@media only screen and (max-width: 480px) {
+  // Set heading sizes
+  h1 { font-size: $heading-size-2; }
+  h2 { font-size: $heading-size-3; }
+  h3 { font-size: $heading-size-4; }
+  h4 { font-size: $heading-size-5; }
+  h5 { font-size: $heading-size-6; }
+  h6 { font-size: $heading-size-6; }
+}
+
+@media only screen and (min-width: 768px), only screen and (min-width: 700px) and (orientation: landscape) {
+  // Set heading sizes
+  h1 { font-size: $heading-size-1; }
+  h2 { font-size: $heading-size-2; }
+  h3 { font-size: $heading-size-3; }
+  h4 { font-size: $heading-size-4; }
+  h5 { font-size: $heading-size-5; }
+  h6 { font-size: $heading-size-6; }
+}
