--- a/styles/scss/_theme.scss
+++ b/styles/scss/_theme.scss
@@ -1,4 +1,3 @@
-
 $color1: #2d7ed2;
 $color2: #38b2ff;
 $color3: #453ad8;
@@ -28,6 +27,10 @@ header {
     background-color: $color2;
     /* offset-x | offset-y | blur-radius | color */
     text-shadow: 3px 3px 0 $color6;
+//
+    background-image: url("../../img/backimage.jpg");
+    //
+    background-size: cover;
   }
 }
 
@@ -36,6 +39,11 @@ header {
   background-color: $color2;
   /* offset-x | offset-y | blur-radius | color */
   // text-shadow: 1px 1px 0 $color5;
+}
+
+#myBtn:hover {
+    /* Add a dark-grey background on hover */
+  background-color: $color1;
 }
 
 nav {
